wip:done signup/login

--- a/sms/smsproject/templates/base.html
+++ b/sms/smsproject/templates/base.html
@@ -25,7 +25,8 @@
         <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-authApp.UserProfileModel.user: (fields.E301) Field defines a relation with the model 'auth.User', which has been swapped out.
+only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
