--- a/Sms-Panel/SmsPanel/templates/signup.html
+++ b/Sms-Panel/SmsPanel/templates/signup.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %}  Employee Form  {% endblock %}
+{% block title %}  Signup  {% endblock %}
 
 {% block javascript %}
 <!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
@@ -16,7 +16,7 @@
 
 {% block content %}
 <div class="col-md-6 col-md-offset-3">
-    <h2 style="text-align:center">Signup</h2><br>
+    <h2 style="text-align:center">Employee Form</h2><br>
     <form method="POST" action="{% url 'signup' %}">
         {% csrf_token %}
         {{ form | crispy }}
