--- a/Sms-Panel/SmsPanel/templates/base.html
+++ b/Sms-Panel/SmsPanel/templates/base.html
@@ -36,14 +36,21 @@
               </button>
                 <a class="navbar-brand" href="/">SMS Panel</a>
             </div>
-
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                   {% if user.is_authenticated %}
-                    <li><a href="{% url 'profile_edit' user.profiles.pk %}">Edit</a></li>
-                    <li><a href="{% url 'change_password' %}">Change Password</a></li>
-                    <li><a href="{% url 'password_reset' %}">Reset Password</a></li>
-                    <li><a href="{% url 'logout' %}">Logout [&nbsp;{{ user.username }}&nbsp;]</a></li>
+                  <li><a href="{% url 'logout' %}">Logout <strong>[&nbsp;{{ user.username }}&nbsp;]</strong></a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                      aria-expanded="false"> Menu <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="{% url 'profile_edit' user.profiles.pk %}">Edit Profile</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="{% url 'change_password' %}">Change Password</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="{% url 'password_reset' %}">Reset Password</a></li>
+                    </ul>
+                  </li>
                   {% else %}
                     <li><a href="{% url 'signup' %}">Signup</a></li>
                     <li><a href="{% url 'login' %}">LogIn</a></li>
