--- a/Sms-Panel/SmsPanel/templates/edit_user.html
+++ b/Sms-Panel/SmsPanel/templates/edit_user.html
@@ -17,12 +17,12 @@
 {% block content %}
 <div class="col-md-6 col-md-offset-3">
     <h2 style="text-align:center">Employee Form</h2><br>
-    <form method="POST" action="{% url 'signup' %}">
+    <form method="POST" action="{% url 'profile_edit' user.profiles.pk %}">
         {% csrf_token %}
         {{ form | crispy }}
         <div style="text-align:center">
           <button type="submit" class="btn btn-primary">Update</button>
-          <a href="" class="btn btn-warning">Cancel</a>
+          <a href="/" class="btn btn-warning">Cancel</a>
           <br><br>
         </div>
     </form>
